Backend/k8s/playlist.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist
  namespace: ricardo
spec:
  selector:
    matchLabels:
      app: playlist
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: playlist
    spec:
      containers:
        - name: playlist
          image: cr.jboi.dev/ricardo/playlist
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: playlist
  namespace: ricardo
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: playlist
  type: ClusterIP
