Backend/k8s/song.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song
  namespace: ricardo
spec:
  selector:
    matchLabels:
      app: song
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: song
    spec:
      containers:
        - name: song
          image: cr.jboi.dev/ricardo/song
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: http
              containerPort: 80
      volumes:
        - name: song-persistent-storage
          persistentVolumeClaim:
            claimName: songstorage

---
apiVersion: v1
kind: Service
metadata:
  name: song
  namespace: ricardo
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: song
  type: ClusterIP
